# telemetry-iceberg-adaptor

./: .gitignore  Cargo.toml  README.md  telemetry-iceberg-adapter.example.toml
docs/: e2e-glue-athena-findings.md  netsec-demo-findings.md  scaling-recommendations.md  vector-local-scale-test.md
scripts/: aws_log_smoke_test.py  e2e_glue_athena_test.py  netsec_demo.py
src/: batching.rs  commit.rs  config.rs  grpc.rs  http.rs  input.rs  lib.rs  main.rs  otlp.rs  parquet_writer.rs  pipeline.rs  prometheus.rs  schema.rs  wal.rs
