[package]
name = "telemetry-iceberg-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow-array = "58.1.0"
arrow-schema = "58.1.0"
arrow-select = "58.1.0"
async-trait = "0.1.89"
aws-config = "1.8.16"
aws-sdk-glue = "1.144.0"
aws-sdk-s3 = "1"
axum = "0.8.9"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
flate2 = "1.1.9"
iceberg = "0.9.0"
iceberg-catalog-glue = "0.9.0"
iceberg-catalog-rest = "0.9.0"
iceberg-storage-opendal = { version = "0.9.0", features = ["opendal-s3"] }
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic", "logs", "metrics", "trace"] }
parquet = { version = "58.1.0", features = ["arrow"] }
prost = "0.14.3"
rdkafka = { version = "0.39.0", features = ["tokio", "cmake-build"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snap = "1.1.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tonic = "0.14.5"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[features]
kafka = ["dep:rdkafka"]
